initializeSegment is async-native